--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "/akelab",
+  "homepage": "https://henkyubi666.github.io/akelab",
   "name": "akelab",
   "version": "0.1.0",
   "private": true,
