--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "5.0.0",
     "react-select": "^5.2.2",
     "sass": "^1.49.7",
+    "use-dark-mode": "^2.3.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
